k8s/ssl.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dualstack-thaidevops-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.dualstack.thaidevops.co"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.dualstack.thaidevops.co"
      tls:
        mode: SIMPLE
        credentialName: dualstack-domain-cert-prod
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble-vs
  namespace: cilium
spec:
  gateways:
    - "istio-system/dualstack-thaidevops-gateway"
  hosts:
    - "hubble-ui.dualstack.thaidevops.co"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: hubble-ui
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: kube-prometheus-stack
spec:
  gateways:
    - "istio-system/dualstack-thaidevops-gateway"
  hosts:
    - "grafana.dualstack.thaidevops.co"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: kube-prometheus-stack-grafana
            port:
              number: 80
